--- a/client/res/css/app.css
+++ b/client/res/css/app.css
@@ -1,5 +1,12 @@
 * { margin: 0; padding: 0; }
 
+#overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 100000;
+}
+
 
 .hud {
 	position: absolute;
@@ -8,7 +15,7 @@
 	bottom: 0;
 	left: 0;
 	z-index: 100;
-	opacity: 0.8;
+	opacity: 0.6;
 	user-select: none;
 }
 
@@ -39,4 +46,43 @@
 	width: 100%;
 	height: 100%;
 	background: url('../img/reticule_inner.png') center center no-repeat transparent;
+}
+
+
+.hud > .centerThing {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 420px;
+	height: 420px;
+	margin-top: -210px;
+	margin-left: -210px;
+	opacity: 0.2;
+}
+
+.hud > .centerThing > div {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.hud > .centerThing > .one {
+	background: url('../img/centerThing-1.png') center center no-repeat transparent;
+}
+.hud > .centerThing > .two {
+	background: url('../img/centerThing-2.png') center center no-repeat transparent;
+}
+.hud > .centerThing > .three {
+	background: url('../img/centerThing-3.png') center center no-repeat transparent;
+}
+.hud > .centerThing > .four {
+	background: url('../img/centerThing-4.png') center center no-repeat transparent;
+}
+.hud > .centerThing > .five {
+	background: url('../img/centerThing-5.png') center center no-repeat transparent;
+}
+.hud > .centerThing > .six {
+	background: url('../img/centerThing-6.png') center center no-repeat transparent;
 }
