--- a/client/res/css/app.css
+++ b/client/res/css/app.css
@@ -1,9 +1,16 @@
 * { margin: 0; padding: 0; }
 
+@font-face {
+    font-family: TerminalLDR;
+    src: url(../fonts/terminal_ldr.ttf);
+    font-weight: normal;
+}
 
 body {
 	overflow: hidden;
-	font-family: sans-serif;
+	font-family: "TerminalLDR", sans-serif;
+	font-size: 24px;
+	font-weight: 100;
 }
 
 #overlay {
@@ -22,7 +29,7 @@ body {
 	left: 0;
 	z-index: 100;
 	opacity: 0.6;
-	user-select: none;
+	/*user-select: none;*/
 }
 
 
@@ -114,4 +121,18 @@ body {
 	top: -25px;
 	width: 100%;
 	text-align: center;
+}
+
+.hud > .targetDistanceInner {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100px;
+	height: 50px;
+	margin-left: -50px;
+	margin-top: -200px;
+	text-align: center;
+	line-height: 50px;
+	color: red;
+
 }
