--- a/client/res/css/app.css
+++ b/client/res/css/app.css
@@ -1,16 +1,15 @@
 * { margin: 0; padding: 0; }
 
 @font-face {
-    font-family: TerminalLDR;
-    src: url(../fonts/terminal_ldr.ttf);
-    font-weight: normal;
+	font-family: 'PorschaC';
+	src: url('../fonts/Bowman.ttf') format('truetype');
 }
 
 body {
 	overflow: hidden;
-	font-family: "TerminalLDR", sans-serif;
-	font-size: 24px;
-	font-weight: 100;
+	font-family: "PorschaC", sans-serif;
+	font-size: 16px;
+	font-weight: bolder;
 }
 
 #overlay {
