--- a/rewrite/res/css/style.css
+++ b/rewrite/res/css/style.css
@@ -1,6 +1,27 @@
+@font-face {
+    font-family: 'type-one';
+    font-weight: normal;
+    src: url( ../fonts/typeone.ttf );
+}
+
+@font-face {
+    font-family: 'NechaoSharp';
+    font-weight: normal;
+    src: url( ../fonts/NechaoSharp.ttf );
+}
+
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    overflow: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform-style: preserve-3d;
+    background-color: black;
 }
 
 
@@ -51,4 +72,92 @@
     width: 0%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+}
+
+
+
+.hud-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+    font-family: 'NechaoSharp';
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transition: -webkit-transform 50ms ease-out;
+    -webkit-transform-style: preserve-3d;
+}
+
+.hud-wrapper.hit {
+    -webkit-transform: translate3d( 0, 0, 5px );
+}
+
+
+.hud-primaryWeaponIndicator, 
+.hud-secondaryWeaponIndicator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    height: 50px;
+    margin-top: -25px;
+    margin-left: -75px;
+
+    background: rgba(0, 162, 255, 0.2);
+    /*border: 1px solid rgba(0, 162, 255, 0.1);*/
+
+    box-shadow: 
+        inset 0 0 15px rgba(0, 0, 0, 0.5), 
+        0 0 1px rgba(0, 162, 255, 1);
+
+    -webkit-transform-origin: 0% 50%;
+}
+
+.hud-primaryWeaponIndicator {
+    left: -1px;
+    margin-left: 0;
+    -webkit-transform: translate3d( 0px, 0, 0 ) rotateY(60deg);
+    /*-webkit-transform: translate3d( -450px, 0, 0 ) rotateY(60deg);*/
+}
+.hud-secondaryWeaponIndicator {
+    right: -1px;
+    left: auto;
+    margin-left: 0;
+    -webkit-transform: translate3d( 0px, 0, 0 ) rotateY(-60deg);
+    /*-webkit-transform: translate3d( 450px, 0, 0 ) rotateY(-60deg);*/
+    -webkit-transform-origin: 100% 50%;
+}
+
+.hud-primaryWeaponIndicator > .hud-weapon {
+    text-align: right;
+    right: 18px;
+}
+.hud-secondaryWeaponIndicator > .hud-weapon {
+    text-align: left;
+    left: 18px;
+}
+
+
+.hud-weapon {
+    position: absolute;
+    top: 50%;
+
+    width: 100%;
+    height: 25px;
+    margin-top: -12.5px;
+    line-height: 25px;
+
+    color: rgb(0, 162, 255);
+    font-size: 10px;
+    opacity: 0.2;
+}
+.hud-weapon.active {
+    opacity: 0.7;
+}
+.hud-weapon.hud-one {
+    top: 37.5%;
+}
+.hud-weapon.hud-two {
+    top: 62.5%;
 }
