--- a/rewrite/res/css/style.css
+++ b/rewrite/res/css/style.css
@@ -85,47 +85,44 @@ body {
     z-index: 100;
     font-family: 'NechaoSharp';
     -webkit-transform: translate3d(0, 0, 0);
-    -webkit-transition: -webkit-transform 50ms ease-out;
+    -webkit-transition: -webkit-transform 100ms ease-out;
     -webkit-transform-style: preserve-3d;
+
+    color: rgb(0, 162, 255);
 }
 
 .hud-wrapper.hit {
-    -webkit-transform: translate3d( 0, 0, 5px );
+    -webkit-transform: translate3d( 0, 0, 20px );
 }
 
 
-.hud-primaryWeaponIndicator, 
+.hud-primaryWeaponIndicator,
 .hud-secondaryWeaponIndicator {
     position: absolute;
     top: 50%;
     left: 50%;
     width: 150px;
-    height: 50px;
+    /*height: 50px;*/
     margin-top: -25px;
     margin-left: -75px;
 
-    background: rgba(0, 162, 255, 0.2);
-    /*border: 1px solid rgba(0, 162, 255, 0.1);*/
-
-    box-shadow: 
-        inset 0 0 15px rgba(0, 0, 0, 0.5), 
-        0 0 1px rgba(0, 162, 255, 1);
+    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
 
     -webkit-transform-origin: 0% 50%;
 }
 
 .hud-primaryWeaponIndicator {
-    left: -1px;
-    margin-left: 0;
-    -webkit-transform: translate3d( 0px, 0, 0 ) rotateY(60deg);
-    /*-webkit-transform: translate3d( -450px, 0, 0 ) rotateY(60deg);*/
+    /*left: -1px;*/
+    /*margin-left: 0;*/
+    /*-webkit-transform: translate3d( 0px, 0, 0 ) rotateY(60deg);*/
+    -webkit-transform: translate3d( -450px, 0, 0 ) rotateY(60deg);
 }
 .hud-secondaryWeaponIndicator {
-    right: -1px;
-    left: auto;
-    margin-left: 0;
-    -webkit-transform: translate3d( 0px, 0, 0 ) rotateY(-60deg);
-    /*-webkit-transform: translate3d( 450px, 0, 0 ) rotateY(-60deg);*/
+    /*right: -1px;*/
+    /*left: auto;*/
+    /*margin-left: 0;*/
+    /*-webkit-transform: translate3d( 0px, 0, 0 ) rotateY(-60deg);*/
+    -webkit-transform: translate3d( 450px, 0, 0 ) rotateY(-60deg);
     -webkit-transform-origin: 100% 50%;
 }
 
@@ -140,24 +137,18 @@ body {
 
 
 .hud-weapon {
-    position: absolute;
-    top: 50%;
+    position: relative;
+    /*top: 50%;*/
 
     width: 100%;
     height: 25px;
-    margin-top: -12.5px;
+    /*margin-top: -12.5px;*/
     line-height: 25px;
 
-    color: rgb(0, 162, 255);
-    font-size: 10px;
+
+    font-size: 12px;
     opacity: 0.2;
 }
 .hud-weapon.active {
     opacity: 0.7;
-}
-.hud-weapon.hud-one {
-    top: 37.5%;
-}
-.hud-weapon.hud-two {
-    top: 62.5%;
 }
