--- a/rewrite/res/css/style.css
+++ b/rewrite/res/css/style.css
@@ -31,6 +31,7 @@ body {
     left: 0;
     width: 100%;
     height: 50%;
+    color: #888;
 }
 
 .assetCounter {
@@ -60,7 +61,7 @@ body {
     width: 200px;
     height: 20px;
     border-radius: 6px;
-    border: 1px solid #000;
+    border: 1px solid #444;
     margin-top: -10px;
     margin-left: -100px;
 }
@@ -71,7 +72,7 @@ body {
     left: 0;
     width: 0%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 
@@ -151,4 +152,43 @@ body {
 }
 .hud-weapon.active {
     opacity: 0.7;
+}
+
+
+
+.hud-reticule {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 31px;
+    height: 30px;
+    margin-left: -15px;
+    margin-top: -15px;
+    background-color: red;
+    -webkit-mask-box-image: url(../img/hud/reticuleMask.png);
+}
+
+.hud-speedIndicator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 102px;
+    height: 109px;
+}
+
+.hud-speedIndicator.left {
+    margin-left: -112px;
+    -webkit-mask-box-image: url(../img/hud/speedLeft.png);
+}
+.hud-speedIndicator.right {
+    margin-left: 10px;
+    -webkit-mask-box-image: url(../img/hud/speedRight.png);
+}
+
+.hud-indicator {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
 }
